--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
         <div id="bodyAbout" class="body-about"></div>
         <div id="bodyWork" class="body-work"></div>
         <div class="chatbot">
-            <div class="chatbot-getname">
-                
-            </div>
+            <form class="chatbot-getname">
+                <input type="text" class="chatbot-getname-input" placeholder="Enter Name or Company Name">
+                <input type="button" class="chatbot-getname-submit" value="Submit">
+            </form>
             <div class="chatbot-content">
                 <div class="chatbot-content-headline">
                     <img src="./assets/chatbot.png">
