--- a/index.html
+++ b/index.html
@@ -26,21 +26,7 @@
         <div id="bodyHome" class="body"></div>
         <div id="bodyAbout" class="body-about"></div>
         <div id="bodyWork" class="body-work"></div>
-        <div class="chatbot">
-            <form class="chatbot-getname">
-                <input type="text" class="chatbot-getname-input" placeholder="Enter Name or Company Name">
-                <input type="button" class="chatbot-getname-submit" value="Submit">
-            </form>
-            <div class="chatbot-content">
-                <div class="chatbot-content-headline">
-                    <img src="./assets/chatbot.png">
-                    <h3>Hello, how can I help you?</h3>
-                </div>
-                <h4 class="chatbot-content-try">Try asking...</h4>
-                <div class="chatbot-content-buttons"></div>
-                <h4 class="chatbot-content-typing">Typing...</h4>
-            </div>
-        </div>
+        <div id="chatBot" class="chatbot"></div>
     </div>
     <script src="./script/chatbot.js"></script>
     <script src="./script/storage.js"></script>
